# llmsp

./: .gitignore  README.md  pyproject.toml
editors/vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
examples/kate/: README.md  lspclient-settings.json
examples/nvim/: llmsp.lua
scripts/: eval_fim.py
src/llmsp/: __init__.py  __main__.py  config.py  server.py  tokenizer.py
src/llmsp/context/: __init__.py  assembler.py  postprocess.py  retrieval.py  ringbuffer.py  structure.py  window.py
src/llmsp/fim/: __init__.py  base.py  factory.py  templates.py
src/llmsp/fim/backends/: __init__.py  codestral.py  llamacpp.py  mock.py  ollama.py  openai_suffix.py  raw_template.py
tests/: test_assembler.py  test_backends.py  test_cli.py  test_config.py  test_postprocess.py  test_real_ollama.py  test_retrieval.py  test_server_e2e.py  test_structure.py  test_templates.py  test_tokenizer_window.py
