[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmsp"
version = "0.1.0"
description = "FIM (Fill-In-the-Middle) LLM code-completion language server with context engineering, built on pygls."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "owasikohu" }]
keywords = ["lsp", "language-server", "code-completion", "fim", "llm", "pygls"]

dependencies = [
    "pygls>=2.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Hosted OpenAI-compatible suffix backend (OpenAI gpt-3.5-turbo-instruct, DeepSeek /beta).
openai = ["openai>=1.40"]
# Token-accurate budgeting (falls back to a char heuristic when absent).
tokenizer = ["tiktoken>=0.7"]
# L2 BM25 ranking (Jaccard is dependency-free and always available).
bm25 = ["rank-bm25>=0.2"]
# L3 structural context.
treesitter = ["tree-sitter>=0.21", "tree-sitter-language-pack>=0.2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-lsp>=1.0",
]
all = [
    "openai>=1.40",
    "tiktoken>=0.7",
    "rank-bm25>=0.2",
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
]

[project.scripts]
llmsp = "llmsp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.package-data]
llmsp = ["py.typed"]
